--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <a href="">About us</a>
     </div>
     <main>
-        <img src="/banner.jpg">
+        <img src="banner.jpg">
         <section>
             <h1>Growing a better world together</h1>
             <p>Rabobank is a cooperative bank with a mission. We embrace innovation,
