--- a/profile.html
+++ b/profile.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles2.css">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="swiper-bundle.min.css">
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <link rel="icon" type="image/x-icon" href="favicon.png">
@@ -14,27 +16,8 @@
 <body>
     <header>
         <a href="index.html"><img src="logo.png" alt="logo"></a>
-        <nav>
-            <ul>
-                <li>
-                    <a href="">Products</a>
-                    <ul class="dropdown">
-                        <li>Expand my business</li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="">Knowledge</a>
-                </li>
-                <li>
-                    <a href="">Support</a>
-                </li>
-                <li>
-                    <a href="">About us</a>
-                </li>
-            </ul>
-        </nav>
         <div>
-            <a href="login.html">
+            <a>
                 <ion-icon name="person-outline"></ion-icon>
                 <h3>Log out</h3>
             </a>
@@ -48,23 +31,73 @@
     </div> -->
     <main>
         <h1>Hi, (Client's name)</h1>
-        <section class="balance">
-            <div>
-                <img src="card.png">
+        <section class="container">
+            <div class="swiper mySwiper">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <span>
+                            <p>SAVINGS</p>
+                            <h1>$0.00</h1>
+                        </span>
+                        <span>
+                            <p>ACCOUNT NUMBER</p>
+                            <h2>**** 7759</h2>
+                        </span>
+                        <span>
+                            <div>
+                                <p>TOTAL CREDIT <br>
+                                    JULY 2024
+                                </p>
+                                <h3>$0.00</h3>
+                            </div>
+                            <div>
+                                <p>TOTAL DEBIT <br>
+                                    JULY 2024
+                                </p>
+                                <h3>$0.00</h3>
+                            </div>
+                        </span>
+                    </div>
+                    <div class="swiper-slide">
+                        <span>
+                            <p>CHECKINGS</p>
+                            <h1>$14,680.00</h1>
+                        </span>
+                        <span>
+                            <p>ACCOUNT NUMBER</p>
+                            <h2>**** 7759</h2>
+                        </span>
+                        <span>
+                            <div>
+                                <p>TOTAL CREDIT <br>
+                                    JULY 2024
+                                </p>
+                                <h3>$0.00</h3>
+                            </div>
+                            <div>
+                                <p>TOTAL DEBIT <br>
+                                    JULY 2024
+                                </p>
+                                <h3>$40.00</h3>
+                            </div>
+                        </span>
+                    </div>
+                    <!-- <div class="swiper-slide">Slide 3</div> -->
+                </div>
+                <div class="swiper-button-next nav-btn"></div>
+                <div class="swiper-button-prev nav-btn"></div>
+                <div class="swiper-pagination"></div>
             </div>
-            <div>
-                <p>Account Balance</p>
-                <h2>$500.00</h2>
-            </div>
-        </section>
-        <section class="action">
-            <div><ion-icon name="cloud-upload-outline"></ion-icon><h3>Transfers</h3></div>
-            <div><ion-icon name="cloud-download-outline"></ion-icon><h3>Withdrawals</h3></div>
-            <div><ion-icon name="wallet-outline"></ion-icon><h3>Payment</h3></div>
+
+
+            
         </section>
 
 
+        <section>
 
+
+        </section>
 
 
 
@@ -88,43 +121,22 @@
         </div>
     </footer>
 
+    <script src="swiper-bundle.min.js"></script>
+    <script>
+        var swiper = new Swiper(".mySwiper", {
+            slidesPerView: 1,
+            spaceBetween: 30,
+            loop: true,
+            pagination: {
+                el: ".swiper-pagination",
+                clickable: true,
+            },
+            navigation: {
+                nextEl: ".swiper-button-next",
+                prevEl: ".swiper-button-prev",
+            },
+        });
+    </script>
 </body>
-<style>
-    main .balance {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-    }
-
-    main .balance div {
-        flex-basis: 40%;
-        padding: 15px;
-    }
-    @media only screen and (max-width:440px) {
-        main .balance {
-            display: block;
-        }
-    }
-    main .action {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        border-top: rgb(75, 75, 75) 1px solid;
-        margin: 20px 0;
-        padding: 50px 0;
-    }
-    main .action div {
-        margin: 10px 15px;
-        padding: 1.5em 2em;
-        color: #fff;
-        display: grid;
-        place-items: center;
-        border-radius: 7px;
-        max-width: 280px;
-        min-width: 180px;
-        background-color: #0a18ac;
-    }
-
-</style>
 
 </html>
