--- a/profile.html
+++ b/profile.html
@@ -24,12 +24,7 @@
             </a>
         </div>
     </header>
-    <!-- <div class="outsidenav">
-        <a href="profile.html">Products</a>
-        <a href="">Knowledge</a>
-        <a href="">Support</a>
-        <a href="">About us</a>
-    </div> -->
+    
     <main>
         <h1>Hi, (Client's name)</h1>
         <section class="container">
@@ -220,11 +215,78 @@
             </div>
         </section>
 
+
+
+
+
+        <h2 style="font-size: 1em;">Rabobank Cards</h2>
+        <section class="rabocard">
+            <div>
+                <span>a</span>
+                <span><img src="/logo.png"></span>
+            </div>
+            <h3>4781&nbsp;XXXX&nbsp;XXXX&nbsp;6040</h3>
+            <div class="date">
+                <p>VAID <br> THRU</p>
+                <h3>07/27</h3>
+            </div>
+            <h3 style="text-align: left;">CLIENT'S NAME</h3>
+        </section>
+
+        <h2 style="font-size: 1em;">Rabobank Tips</h2>
+        <section class="rabotips">
+            <div>
+                <span><i class="fa-solid fa-piggy-bank" id="iconss" style="color: rgb(255, 217, 0);"></i></span>
+                <span>
+                    <h4>Auto Save</h4>
+                    <p>Set a goal, save automatically with Rabobank's
+                         Auto Save and track your progress</p>
+                </span>
+            </div>
+            <div>
+                <span><i class="fa-solid fa-wallet" id="iconss" style=" color: rgb(0, 201, 10);"></i></span>
+                <span>
+                    <h4>Budget</h4>
+                    <p>Check in with your budget and stay on top of
+                        your spending
+                    </p>
+                </span>
+            </div>
+            <div>
+                <span><i class="fa-solid fa-house-chimney" id="iconss" style="color: rgb(0, 173, 173);"></i></span>
+                <span>
+                    <h4>Home Option</h4>
+                    <p>Your home purchase, refinance and insights right under one roof</p>
+                </span>
+            </div>
+            <div>
+                <span><i class="fa-solid fa-circle-info" id="iconss" style="color: rgb(243, 23, 96);"></i></span>
+                <span>
+                    <h4>Home Option</h4>
+                    <p>Your home purchase, refinance and insights right under one roof</p>
+                </span>
+            </div>
+        </section>
+
+
+
+
     </main>
 
-<a href="" class="customersupport">
-    <i class="fa-solid fa-comment" id="ikon"></i>
-</a>
+
+
+
+
+
+
+
+
+
+
+
+    <a href="chatroom.html" class="customersupport">
+        <i class="fa-solid fa-comment" id="ikon"></i>
+    </a>
 
 
 
