--- a/profile.html
+++ b/profile.html
@@ -20,7 +20,6 @@
         <div>
             <a>
                 <ion-icon name="person-outline"></ion-icon>
-
             </a>
         </div>
     </header>
@@ -144,57 +143,43 @@
 
         <section class="transfer">
             <div class="row">
-                <a href="">
+                <a href="Transfer_Options/wiretransfer.html">
                     <i class="fa-solid fa-share-from-square" id="icon"></i>
                     <h3>Wire <br> Transfer</h3>
                 </a>
-                <a href="">
+                <a href="Transfer_Options/localtransfer.html">
                     <i class="fa-solid fa-share-from-square" id="icon"></i>
                     <h3>Local <br> Transfer</h3>
                 </a>
-                <a href="">
+                <a href="Transfer_Options/Internaltransfer.html">
                     <i class="fa-solid fa-share-from-square" id="icon"></i>
                     <h3>Internal <br> Transfer</h3>
                 </a>
             </div>
             <div class="row">
-                <a href="">
+                <a href="Transfer_Options/crypto.html">
                     <i class="fa-solid fa-bitcoin-sign" id="icon"></i>
                     <h3>Buy <br> Crypto</h3>
                 </a>
-                <a href="">
+                <a href="Transfer_Options/paybills.html">
                     <i class="fa-solid fa-credit-card" id="icon"></i>
                     <h3>Pay <br> Bills</h3>
                 </a>
-                <a href="">
+                <a href="Transfer_Options/beneficiary.html">
                     <i class="fa-solid fa-user-plus" id="icon"></i>
                     <h3>Add <br> Beneficiary</h3>
                 </a>
             </div>
             <div class="row">
-                <a href="">
+                <a href="Transfer_Options/cardfund.html">
                     <i class="fa-solid fa-credit-card" id="icon"></i>
                     <h3>Card <br> Deposit</h3>
                 </a>
-                <a href="">
+                <a href="Transfer_Options/crypto.html">
                     <i class="fa-solid fa-bitcoin-sign" id="icon"></i>
                     <h3>Crypto <br> Deposit</h3>
                 </a>
-                <a href="">
-                    <i class="fa-solid fa-credit-card" id="icon"></i>
-                    <h3>Check <br>Deposit</h3>
-                </a>
-            </div>
-            <div class="row">
-                <a href="">
-                    <i class="fa-solid fa-list" id="icon"></i>
-                    <h3>Savings <br> Statement</h3>
-                </a>
-                <a href="">
-                    <i class="fa-solid fa-list" id="icon"></i>
-                    <h3>Checkings <br> Statement</h3>
-                </a>
-                <a href="">
+                <a href="Transfer_Options/notification.html">
                     <i class="fa-solid fa-envelope" id="icon"></i>
                     <h3>Rabobank <br>Alerts</h3>
                 </a>
@@ -208,7 +193,7 @@
                     <i class="fa-solid fa-chart-line" id="icon"></i>
                     <h3>Rabobank <br> Investments</h3>
                 </a>
-                <a href="">
+                <a href="https://wa.me/17472049587">
                     <i class="fa-solid fa-comment" id="icon"></i>
                     <h3>Rabobank <br>Support</h3>
                 </a>
@@ -223,7 +208,7 @@
         <section class="rabocard">
             <div>
                 <span>a</span>
-                <span><img src="logo.png"></span>
+                <span><img src="/logo.png"></span>
             </div>
             <h3>4781&nbsp;XXXX&nbsp;XXXX&nbsp;6040</h3>
             <div class="date">
@@ -262,8 +247,10 @@
             <div>
                 <span><i class="fa-solid fa-circle-info" id="iconss" style="color: rgb(243, 23, 96);"></i></span>
                 <span>
-                    <h4>Home Option</h4>
-                    <p>Your home purchase, refinance and insights right under one roof</p>
+                    <h4>Security Tip</h4>
+                    <p>We will NEVER ask you to provide your security details 
+                        such as COT Code or any sensitive details of your account
+                    </p>
                 </span>
             </div>
         </section>
@@ -284,7 +271,7 @@
 
 
 
-    <a href="chatroom.html" class="customersupport">
+    <a href="https://wa.me/17472049587" class="customersupport">
         <i class="fa-solid fa-comment" id="ikon"></i>
     </a>
 
