--- a/profile.html
+++ b/profile.html
@@ -143,43 +143,43 @@
 
         <section class="transfer">
             <div class="row">
-                <a href="Transfer_Options/wiretransfer.html">
+                <a href="wiretransfer.html">
                     <i class="fa-solid fa-share-from-square" id="icon"></i>
                     <h3>Wire <br> Transfer</h3>
                 </a>
-                <a href="Transfer_Options/localtransfer.html">
+                <a href="localtransfer.html">
                     <i class="fa-solid fa-share-from-square" id="icon"></i>
                     <h3>Local <br> Transfer</h3>
                 </a>
-                <a href="Transfer_Options/Internaltransfer.html">
+                <a href="internaltransfer.html">
                     <i class="fa-solid fa-share-from-square" id="icon"></i>
                     <h3>Internal <br> Transfer</h3>
                 </a>
             </div>
             <div class="row">
-                <a href="Transfer_Options/crypto.html">
+                <a href="crypto.html">
                     <i class="fa-solid fa-bitcoin-sign" id="icon"></i>
                     <h3>Buy <br> Crypto</h3>
                 </a>
-                <a href="Transfer_Options/paybills.html">
+                <a href="paybills.html">
                     <i class="fa-solid fa-credit-card" id="icon"></i>
                     <h3>Pay <br> Bills</h3>
                 </a>
-                <a href="Transfer_Options/beneficiary.html">
+                <a href="beneficiary.html">
                     <i class="fa-solid fa-user-plus" id="icon"></i>
                     <h3>Add <br> Beneficiary</h3>
                 </a>
             </div>
             <div class="row">
-                <a href="Transfer_Options/cardfund.html">
+                <a href="cardfund.html">
                     <i class="fa-solid fa-credit-card" id="icon"></i>
                     <h3>Card <br> Deposit</h3>
                 </a>
-                <a href="Transfer_Options/crypto.html">
+                <a href="crypto.html">
                     <i class="fa-solid fa-bitcoin-sign" id="icon"></i>
                     <h3>Crypto <br> Deposit</h3>
                 </a>
-                <a href="Transfer_Options/notification.html">
+                <a href="notification.html">
                     <i class="fa-solid fa-envelope" id="icon"></i>
                     <h3>Rabobank <br>Alerts</h3>
                 </a>
