--- a/wiretransfer.html
+++ b/wiretransfer.html
@@ -17,7 +17,7 @@
 
 <body>
     <header>
-        <a href="index.html"><img src="/logo.png" alt="logo"></a>
+        <a href="index.html"><img src="logo.png" alt="logo"></a>
         <div>
             <a>
                 <ion-icon name="person-outline"></ion-icon>
