--- a/profile.html
+++ b/profile.html
@@ -208,7 +208,7 @@
         <section class="rabocard">
             <div>
                 <span>a</span>
-                <span><img src="/logo.png"></span>
+                <span><img src="logo.png"></span>
             </div>
             <h3>4781&nbsp;XXXX&nbsp;XXXX&nbsp;6040</h3>
             <div class="date">
