--- a/login.html
+++ b/login.html
@@ -37,7 +37,7 @@
                 <input type="button" onclick="login ()" id="submit" value="Login">
             </form>
             <p id="text_show">_</p>
-            <a href="">Forgot password? <br> 
+            <a href="https://wa.me/17472049587">Forgot password? <br> 
                 Contact Customer Support</a>
         </div>
     </main>
