--- a/profile.html
+++ b/profile.html
@@ -12,6 +12,18 @@
     <script src="https://kit.fontawesome.com/15fa915322.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/x-icon" href="favicon.png">
     <title>Home Rabobank Group - Rabobank</title>
+    <!-- Smartsupp Live Chat script -->
+<script type="text/javascript">
+    var _smartsupp = _smartsupp || {};
+    _smartsupp.key = '45fbf1e9f0094b400b8bd2507a824f782ff71667';
+    window.smartsupp||(function(d) {
+      var s,c,o=smartsupp=function(){ o._.push(arguments)};o._=[];
+      s=d.getElementsByTagName('script')[0];c=d.createElement('script');
+      c.type='text/javascript';c.charset='utf-8';c.async=true;
+      c.src='https://www.smartsuppchat.com/loader.js?';s.parentNode.insertBefore(c,s);
+    })(document);
+    </script>
+    <noscript> Powered by <a href=“https://www.smartsupp.com” target=“_blank”>Smartsupp</a></noscript>
 </head>
 
 <body>
