--- a/profile.html
+++ b/profile.html
@@ -197,18 +197,15 @@
                 </a>
             </div>
             <div class="row">
-                <a href="">
+                <a href="loans.html">
                     <i class="fa-solid fa-money-bill" id="icon"></i>
                     <h3>Rabobank <br>Loans</h3>
                 </a>
-                <a href="">
+                <a href="invest.html">
                     <i class="fa-solid fa-chart-line" id="icon"></i>
                     <h3>Rabobank <br> Investments</h3>
                 </a>
-                <a href="https://wa.me/17472049587">
-                    <i class="fa-solid fa-comment" id="icon"></i>
-                    <h3>Rabobank <br>Support</h3>
-                </a>
+                
             </div>
         </section>
 
