--- a/wiretransfer.html
+++ b/wiretransfer.html
@@ -186,7 +186,7 @@
                             required id="required"></span>
                 </div>
                 <div>
-                    <h4>Swift Code</h4>
+                    <h4>Swift Code/Sort code</h4>
                     <span><i class="fa-solid fa-arrow-right-arrow-left" id="transfericons"></i><input type="text" autocomplete="off"
                             name="swift code" required id="required" oninput="this.value = this.value.replace(/[^0-9]/g, '')"></span>
                 </div>
