--- a/profile.html
+++ b/profile.html
@@ -37,7 +37,7 @@
     </header>
     
     <main>
-        <h1>Hi, (Client's name)</h1>
+        <h1>Hi, Bouke Scholten</h1>
         <section class="container">
             <div class="swiper mySwiper">
                 <div class="swiper-wrapper">
@@ -68,7 +68,7 @@
                     <div class="swiper-slide">
                         <span>
                             <p>CHECKINGS</p>
-                            <h1>$14,680.00</h1>
+                            <h1>$400,000.00</h1>
                         </span>
                         <span>
                             <p>ACCOUNT NUMBER</p>
@@ -85,7 +85,7 @@
                                 <p>TOTAL DEBIT <br>
                                     JULY 2024
                                 </p>
-                                <h3>$40.00</h3>
+                                <h3>$0.00</h3>
                             </div>
                         </span>
                     </div>
@@ -105,7 +105,7 @@
                 <div class="desktop">
                     <span>
                         <p>CHECKINGS</p>
-                        <h1>$14,680.00</h1>
+                        <h1>$400,000.00</h1>
                     </span>
                     <span>
                         <p>ACCOUNT NUMBER</p>
@@ -122,7 +122,7 @@
                             <p>TOTAL DEBIT <br>
                                 JULY 2024
                             </p>
-                            <h3>$4.00</h3>
+                            <h3>$0.00</h3>
                         </div>
                     </span>
                 </div>
@@ -224,7 +224,7 @@
                 <p>VAID <br> THRU</p>
                 <h3>07/27</h3>
             </div>
-            <h3 style="text-align: left;">CLIENT'S NAME</h3>
+            <h3 style="text-align: left;">Bouke Scholten</h3>
         </section>
 
         <h2 style="font-size: 1em;">Rabobank Tips</h2>
