--- a/login.html
+++ b/login.html
@@ -186,8 +186,8 @@
         let text_show = document.getElementById("text_show");
 
 
-        let website_username = "divinemyboy"
-        let website_password = "123456"
+        let website_username = "boukescholten"
+        let website_password = "334573"
 
 
         if (username == website_username && password2 == website_password) {
