--- a/loans.html
+++ b/loans.html
@@ -38,14 +38,14 @@
     </header>
 
     <main>
-        <h1>Hi, (Client's name)</h1>
+        <h1>Hi, Bouke Scholten</h1>
         <section class="container">
             <div class="swiper mySwiper">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <span>
                             <p>SAVINGS</p>
-                            <h1>$0.00</h1>
+                            <h1>€0.00</h1>
                         </span>
                         <span>
                             <p>ACCOUNT NUMBER</p>
@@ -56,20 +56,20 @@
                                 <p>TOTAL CREDIT <br>
                                     JULY 2024
                                 </p>
-                                <h3>$0.00</h3>
+                                <h3>€0.00</h3>
                             </div>
                             <div>
                                 <p>TOTAL DEBIT <br>
                                     JULY 2024
                                 </p>
-                                <h3>$0.00</h3>
+                                <h3>€0.00</h3>
                             </div>
                         </span>
                     </div>
                     <div class="swiper-slide">
                         <span>
                             <p>CHECKINGS</p>
-                            <h1>$14,680.00</h1>
+                            <h1>€400,000.00</h1>
                         </span>
                         <span>
                             <p>ACCOUNT NUMBER</p>
@@ -80,13 +80,13 @@
                                 <p>TOTAL CREDIT <br>
                                     JULY 2024
                                 </p>
-                                <h3>$0.00</h3>
+                                <h3>€0.00</h3>
                             </div>
                             <div>
                                 <p>TOTAL DEBIT <br>
                                     JULY 2024
                                 </p>
-                                <h3>$40.00</h3>
+                                <h3>€0.00</h3>
                             </div>
                         </span>
                     </div>
@@ -106,7 +106,7 @@
                 <div class="desktop">
                     <span>
                         <p>CHECKINGS</p>
-                        <h1>$14,680.00</h1>
+                        <h1>€400,000.00</h1>
                     </span>
                     <span>
                         <p>ACCOUNT NUMBER</p>
@@ -117,20 +117,20 @@
                             <p>TOTAL CREDIT <br>
                                 JULY 2024
                             </p>
-                            <h3>$0.00</h3>
+                            <h3>€0.00</h3>
                         </div>
                         <div>
                             <p>TOTAL DEBIT <br>
                                 JULY 2024
                             </p>
-                            <h3>$4.00</h3>
+                            <h3>€0.00</h3>
                         </div>
                     </span>
                 </div>
                 <div class="desktop">
                     <span>
                         <p>SAVINGS</p>
-                        <h1>$0.00</h1>
+                        <h1>€0.00</h1>
                     </span>
                     <span>
                         <p>ACCOUNT NUMBER</p>
@@ -141,13 +141,13 @@
                             <p>TOTAL CREDIT <br>
                                 JULY 2024
                             </p>
-                            <h3>$0.00</h3>
+                            <h3>€0.00</h3>
                         </div>
                         <div>
                             <p>TOTAL DEBIT <br>
                                 JULY 2024
                             </p>
-                            <h3>$0.00</h3>
+                            <h3>€0.00</h3>
                         </div>
                     </span>
                 </div>
