--- a/internaltransfer.html
+++ b/internaltransfer.html
@@ -167,7 +167,7 @@
                 </div>
                 <div>
                     <h4>Enter Amount</h4>
-                    <span><i class="fa-solid fa-dollar-sign" id="transfericons"></i><input type="text" name="amount" autocomplete="off"
+                    <span><i class="fa-solid fa-euro-sign" id="transfericons"></i><input type="text" name="amount" autocomplete="off"
                             required id="required" oninput="this.value = this.value.replace(/[^0-9]/g, '')"></span>
                 </div>
                 <div>
