--- a/login.html
+++ b/login.html
@@ -250,7 +250,7 @@
 
         }
 
-        else if (username == "" && password2 == "")
+        else if (username2 == "" && password22 == "")
 
 
             alert("Please fill out the fields")
@@ -268,7 +268,7 @@
 
 
 
-        else if (username !== website_username && password2 == website_password) {
+        else if (username2 !== website_username && password22 == website_password) {
 
             document.getElementById("username").style.border = "2px solid red"
             document.getElementById("password_user").style.border = "2px solid green"
