--- a/login.html
+++ b/login.html
@@ -246,7 +246,7 @@
 
         if (username2 == website_username && password22 == website_password) {
 
-            window.location = "deborahcooperprofile.html"
+            window.location = "deborahcooper.html"
 
         }
 
