--- a/notification.html
+++ b/notification.html
@@ -158,10 +158,10 @@
             <h1>Pay Bills</h1>
             <form class="maindivs">
                 <div>
-                    <i class="fa-solid fa-book" id="icon"></i>
-                    <h2>No notification yet</h2>
+                    <i class="fa-solid fa-share" id="icon"></i>
+                    <h2>Debit Alert</h2>
                 </div>
-                <h5>Contact Customer Support for further details</h5>
+                <h5>€400,000.00 to Deborah cooper</h5>
             </form>
 
         </section>
@@ -181,8 +181,8 @@
         
     }
     .transfers h5 {
-        font-size: .7em;
-        margin-bottom: 30px;
+        font-size: .8em;
+        margin-bottom: 50px;
     }
     .transfers a {
         background-color: #00053a;
