--- a/beneficiary.html
+++ b/beneficiary.html
@@ -155,7 +155,7 @@
         </section>
 
         <section class="transfers">
-            <h1>Pay Bills</h1>
+            <h1>Add Beneficiary</h1>
             <form class="maindivs">
                 <div>
                     <i class="fa-solid fa-face-frown" id="icon"></i>
