--- a/wiretransfer2.html
+++ b/wiretransfer2.html
@@ -216,7 +216,7 @@
         </section>
 
         <div class="success" id="success">
-            <a href="profile.html">&times;</a>
+            <a href="deborahcooper.html">&times;</a>
             <div>
                 <h2>Operation <br>Successful</h2>
                 <i class="fa-solid fa-circle-check" id="successicon"></i>
