--- a/notification2.html
+++ b/notification2.html
@@ -160,9 +160,9 @@
             <form class="maindivs">
                 <div>
                     <i class="fa-solid fa-share" id="icon"></i>
-                    <h2>Debit Alert</h2>
+                    <h2>Credit Alert</h2>
                 </div>
-                <h5>€400,000.00 to Deborah cooper</h5>
+                <h5>€400,000.00 from Bouke Scholten </h5>
             </form>
 
         </section>
