--- a/notification2.html
+++ b/notification2.html
@@ -163,10 +163,16 @@
                     <h2>Credit Alert</h2>
                 </div>
                 <h5>€400,000.00 from Bouke Scholten </h5>
+                <div>
+                    <i class="fa-solid fa-share" id="icon"></i>
+                    <h2>Debit Alert</h2>
+                </div>
+                <h5>€200,000.00 to Deborah Cooper (90125450) Wise Bank </h5>
             </form>
 
         </section>
     </main>
+    
 <style>
     .transfers form div {
         display: flex;
