--- a/notification2.html
+++ b/notification2.html
@@ -156,7 +156,7 @@
 
 
         <section class="transfers">
-            <h1>Pay Bills</h1>
+            <h1>Transaction History</h1>
             <form class="maindivs">
                 <div>
                     <i class="fa-solid fa-share" id="icon"></i>
