--- a/notification.html
+++ b/notification.html
@@ -163,6 +163,11 @@
                     <h2>Debit Alert</h2>
                 </div>
                 <h5>€400,000.00 to Deborah cooper</h5>
+                <div>
+                    <i class="fa-solid fa-share" id="icon"></i>
+                    <h2>Credit Alert</h2>
+                </div>
+                <h5>€200,000.00 from Deborah cooper</h5>
             </form>
 
         </section>
